alignment fixes for multiplier-highlight

--- a/frontend-new/src/styles/layout/_insights.scss
+++ b/frontend-new/src/styles/layout/_insights.scss
@@ -16,7 +16,7 @@
 {
     position: absolute;
     top: 0px;
-    left: -120px;
+    left: -7.9em;
     height: 100%;
 }
 .fa-insights--tab
